welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: value serpent
	serpent()
        ^SnakeBuggle:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:11: warning: enclosing method arriver has result type Unit: return value discarded
      return true
      ^SnakeBuggle:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:14: warning: enclosing method arriver has result type Unit: return value discarded
  return false
  ^