welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  avance(6)
}

def arriver(){
	if (estFaceMur() && getDirection() == Direction.EST){
    gauche();
    if (estFaceMur()){
      droite()
      return true
    }
  }
  return false
}

